# main.go
@@ -7,12 +7,14 @@ import (
 	"github.com/swaggo/gin-swagger/swaggerFiles"
 	"github.com/templateOfService/connectors/mysql"
 	_ "github.com/templateOfService/docs"
+	"github.com/templateOfService/jobs"
 	"github.com/templateOfService/services/auth"
 	"github.com/templateOfService/services/cinema"
 	"github.com/templateOfService/services/film"
 	"github.com/templateOfService/services/schedule"
 	"log"
 	"os"
+	"sync"
 )
 
 func initRouter() *gin.Engine {
@@ -34,6 +36,10 @@ func initRouter() *gin.Engine {
 
 	scheduleHandler := schedule.NewHandler()
 	router.GET("/api/v1/schedules", scheduleHandler.ListSchedules)
+	router.GET("/api/v1/ticket", scheduleHandler.ListSeats)
+	router.POST("/api/v1/ticket/hold", scheduleHandler.HoldSeats)
+	router.POST("/api/v1/ticket/confirm", scheduleHandler.ConfirmSeats)
+	router.POST("/api/v1/ticket/cancel", scheduleHandler.CancelSeats)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	return router
@@ -53,8 +59,17 @@ func main() {
 	}
 
 	router := initRouter()
-	err = router.Run()
-	if err != nil {
-		log.Fatalf("Error starting server: %s", err.Error())
-	}
+	var wg sync.WaitGroup
+	wg.Add(2)
+	go func() {
+		err = router.Run()
+		if err != nil {
+			log.Fatalf("Error starting server: %s", err.Error())
+		}
+	}()
+
+	go func() {
+		jobs.CleanExpiredHoldingSeats()
+	}()
+	wg.Wait()
 }
